--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 /app/etc/config.php
 /app/etc/env.php
 
+var/.regenerate
+vendor/composer/autoload_files.php
+vendor/composer/autoload_psr4.php
+vendor/composer/autoload_static.php
+vendor/composer/installed.php
+
 /.buildpath
 /.cache
 /.metadata
@@ -12,3 +18,11 @@
 /var/*
 /generated/*
 .DS_Store
+
+vendor/*
+
+vendor/composer/LICENSE
+vendor/composer/installed.json
+ 
+composer.json
+composer.lock
